[GEOT-6901] Use StandardCharsets when possible, add a PMD check to enfornce it